@@ -1,3 +1,11 @@
+Sat Aug 31 08:31:25 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
+	* src/dblib/dblib.c:
+	- fixed dbwritetext
+	* src/dblib/unittests/Makefile.am src/dblib/unittests/t0013.c:
+	* src/dblib/unittests/t0014.c:
+	- enabled test 13 and 14 adding binary file and using default
+	  parameters if none
+
 Fri Aug 30 23:06:16 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
 	* src/dblib/dblib.c:
 	- correct return of dbsqlok
